--- a/src/app/modules/authentication/login/login.component.html
+++ b/src/app/modules/authentication/login/login.component.html
@@ -1,11 +1,21 @@
 <md-card [class]="'loginCard'">
-    <md-card-title-group>
-        <md-card-title>Login</md-card-title>
-    </md-card-title-group>
-    <form [formGroup]="loginForm" (ngSubmit)="doLogin($event)">
-        <md-input formControlName="email" type="email" placeholder="Your email"></md-input>
-        <md-input formControlName="password" type="password" placeholder="Your password"></md-input>
-        <button md-button type="submit">Log in</button>
+  <md-card-title-group>
+    <md-card-title>Sign-In:</md-card-title>
+  </md-card-title-group>
+  <md-card-content>
+    <form [formGroup]="loginForm">
+      <div>
+        <md-input formControlName="email" type="email" placeholder="Your Email"></md-input>
+      </div>
+      <div>
+        <md-input formControlName="password" type="password" placeholder="Your Password"></md-input>
+      </div>
+      <md-checkbox formControlName="rememberMe">
+        Remember me
+      </md-checkbox>
     </form>
-    <div *ngIf="authenticationFailed">Fehler beim Login</div>
+  </md-card-content>
+  <md-card-actions>
+    <button md-raised-button color="primary" [disabled]="authRunning" (click)="doLogin()">Login</button>
+  </md-card-actions>
 </md-card>
