--- a/src/app/modules/authentication/login/login.component.css
+++ b/src/app/modules/authentication/login/login.component.css
@@ -1,4 +1,7 @@
-.loginCard {
-    max-width: 200px;
-    margin: auto;
+.ng-valid[required], .ng-valid.required  {
+  border-left: 5px solid #42A948; /* green */
+}
+
+.ng-invalid:not(form)  {
+  border-left: 5px solid #a94442; /* red */
 }
