--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -8,7 +8,7 @@
       </md-nav-list>
     </md-sidenav>
     <md-toolbar> <button md-icon-button (click)='sidenav.toggle()'> <md-icon>menu</md-icon> </button> {{title}}
-    <button md-icon-button (click)='logout()'> <md-icon>backup</md-icon> </button>
+    <button md-raised-button color="primary" (click)="logout()">Logout</button>
     </md-toolbar>
     <router-outlet></router-outlet>
   </md-sidenav-layout>
