--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,14 +1,1 @@
- <md-sidenav-layout fullscreen>
-    <md-sidenav #sidenav mode="side" opened="true">
-      <md-nav-list>
-        <a md-list-item routerLink="/home">
-          <md-icon md-list-icon>home</md-icon> <span md-line>Home</span> </a>
-        <a md-list-item routerLink="/guest">
-          <md-icon md-list-icon>home</md-icon> <span md-line>Guest</span> </a>
-      </md-nav-list>
-    </md-sidenav>
-    <md-toolbar> <button md-icon-button (click)='sidenav.toggle()'> <md-icon>menu</md-icon> </button> {{title}}
-    <button md-raised-button color="primary" (click)="logout()">Logout</button>
-    </md-toolbar>
-    <router-outlet></router-outlet>
-  </md-sidenav-layout>
+Home!
