--- a/src/app/modules/authentication/login/login.component.html
+++ b/src/app/modules/authentication/login/login.component.html
@@ -1,6 +1,6 @@
 <md-card [class]="'loginCard'">
   <md-card-title-group>
-    <md-card-title>Sign-In:</md-card-title>
+    <md-card-title i18n="Title of Login / Sign-In Screen">Sign-In:</md-card-title>
   </md-card-title-group>
   <md-card-content>
     <form [formGroup]="loginForm">
