--- a/src/app/modules/layout/layout.component.html
+++ b/src/app/modules/layout/layout.component.html
@@ -1,21 +1,15 @@
-<md-sidenav-layout fullscreen>
-  <md-sidenav #sidenav mode="side" opened="true">
-    <md-nav-list>
-      <a md-list-item routerLink="/layout/home" routerLinkActive="active-link">
-        <md-icon md-list-icon>home</md-icon> <span md-line>Home</span> </a>
-      <a md-list-item routerLink="/guest" routerLinkActive="active-link">
-        <md-icon md-list-icon>home</md-icon> <span md-line>Guest</span> </a>
-    </md-nav-list>
+<md-toolbar color="primary">Responsive SideNavs using Flex-Layout <button md-raised-button color="primary" (click)="logout()">Logout</button> </md-toolbar>
+<md-sidenav-container>
+  <md-sidenav #sidenav mode="side" [opened]="isOpen" class="example-sidenav">
+
+    <ng-content select="[sidenav-content]"></ng-content>
+
   </md-sidenav>
-  <md-toolbar>
-    <div fxLayout="row" fxLayoutAlign="space-around center">
-      <div fxFlex="80">
-        <button md-icon-button (click)='sidenav.toggle()'> <md-icon>menu</md-icon> </button> {{title}}
-      </div>
-      <div fxFlex="20">
-        <button md-raised-button color="primary" (click)="logout()">Logout</button>
-      </div>
-    </div>
-  </md-toolbar>
-  <router-outlet></router-outlet>
-</md-sidenav-layout>
+  <div class="main-content" (click)="toggleSideNav()" fxLayout="column">
+
+    <ng-content select="[main-content]"></ng-content>
+
+    <router-outlet></router-outlet>
+
+  </div>
+</md-sidenav-container>
