--- a/src/app/modules/layout/layout.component.html
+++ b/src/app/modules/layout/layout.component.html
@@ -1,9 +1,9 @@
 <md-toolbar color="primary">
 
-  <div class="flex-container" style="width: 100%" fxLayout="row" fxLayoutAlign="center center">
+  <div class="flex-container" style="width: 100%" fxLayout="row" fxLayoutAlign="space-between center">
 <div class="flex-item" fxFlex="20%" fxFlex.xs="40%"> test </div>
 <div class="flex-item" fxFlex> test 2 </div>
-<div class="flex-item" fxFlex="20%" fxFlexAlign="end">
+<div class="flex-item" fxFlex="20%" style="text-align: right">
 
 <profile-container></profile-container>
 
