--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,6 +1,21 @@
-<div fxLayout="row" fxLayoutAlign="center center" style="height: 100%">
-    <div id="map"></div>
+
+<md-grid-list cols="4" [style.background]="'lightblue'">
+   <md-grid-tile [style.background]="'gray'">One</md-grid-tile>
+   <md-grid-tile [style.background]="'blue'">Two</md-grid-tile>
+   <md-grid-tile>Three</md-grid-tile>
+   <md-grid-tile>Four</md-grid-tile>
+</md-grid-list>
+
+
+
+  <div class="flex-container" style="width: 100%" fxLayout="row" fxLayoutAlign="space-between center">
+<div class="flex-item" fxFlex="33%" fxFlex.xs="40%">
+  <bar-chart *ngIf="chartData" [data]="chartData" [width]="600" [height]="200"></bar-chart>
+</div>
+<div class="flex-item" fxFlex="33%"></div>
+<div class="flex-item" fxFlex="33%" style="text-align: right"></div>
 </div>
 
 
-  <div *ngFor="let m of markers | async; let i = index"></div>
+
+<div *ngFor="let m of markers | async; let i = index"></div>
