--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,7 +1,7 @@
 @import '~@angular/material/core/theming/all-theme';
 @include md-core();
-$primary: md-palette($md-orange, 800);
+$primary: md-palette($md-grey, 1000);
 $accent:  md-palette($md-light-blue, 600, A100, A400);
 $warn:    md-palette($md-red, 600);
-$theme: md-dark-theme($primary, $accent, $warn);
-@include angular-material-theme($theme); 
+$theme: md-light-theme($primary, $accent, $warn);
+@include angular-material-theme($theme);  
